@@ -1,6 +1,5 @@
 package com.example.restapi.service;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -12,17 +11,19 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyLong;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
 import org.mockito.MockitoAnnotations;
 
+import com.example.restapi.model.EspacioIndividual;
+import com.example.restapi.model.Libro;
+import com.example.restapi.model.Ordenador;
 import com.example.restapi.model.Reserva;
+import com.example.restapi.model.SalaGrupal;
 import com.example.restapi.repository.RepositorioEspacioIndividual;
 import com.example.restapi.repository.RepositorioLibros;
 import com.example.restapi.repository.RepositorioOrdenadores;
@@ -49,103 +50,155 @@ class ReservaServiceTest {
     @InjectMocks
     private ReservaService reservaService;
 
+    private Reserva reserva;
+
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
+
+        reserva = new Reserva();
+        reserva.setId(1L);
+        reserva.setNombreCliente("Juan");
+        reserva.setEmailCliente("juan@correo.com");
+
+        Libro libro = new Libro();
+        libro.setId(10L);
+        reserva.setLibro(libro);
+
+        Ordenador ordenador = new Ordenador();
+        ordenador.setId(20L);
+        reserva.setOrdenador(ordenador);
+
+        SalaGrupal sala = new SalaGrupal();
+        sala.setId(30L);
+        reserva.setSalaGrupal(sala);
+
+        EspacioIndividual espacio = new EspacioIndividual();
+        espacio.setId(40L);
+        reserva.setEspacioIndividual(espacio);
+
+        when(libroRepository.findById(10L)).thenReturn(Optional.of(libro));
+        when(ordenadorRepository.findById(20L)).thenReturn(Optional.of(ordenador));
+        when(salaGrupalRepository.findById(30L)).thenReturn(Optional.of(sala));
+        when(espacioIndividualRepository.findById(40L)).thenReturn(Optional.of(espacio));
     }
 
     @Test
     void testObtenerTodasLasReservas() {
-        Reserva reserva1 = new Reserva();
-        Reserva reserva2 = new Reserva();
-        List<Reserva> listaReservas = Arrays.asList(reserva1, reserva2);
-
-        when(reservaRepository.findAll()).thenReturn(listaReservas);
-
-        List<Reserva> resultado = reservaService.obtenerTodasLasReservas();
-
-        assertEquals(2, resultado.size());
+        when(reservaRepository.findAll()).thenReturn(List.of(reserva));
+        List<Reserva> reservas = reservaService.obtenerTodasLasReservas();
+        assertEquals(1, reservas.size());
     }
 
     @Test
-    void testObtenerReservaPorId_Existente() {
-        Reserva reserva = new Reserva();
-        reserva.setId(1L);
-
+    void testObtenerReservaPorIdExistente() {
         when(reservaRepository.findById(1L)).thenReturn(Optional.of(reserva));
-
         Reserva resultado = reservaService.obtenerReservaPorId(1L);
-
         assertNotNull(resultado);
-        assertEquals(1L, resultado.getId());
+        assertEquals("Juan", resultado.getNombreCliente());
     }
 
     @Test
-    void testObtenerReservaPorId_NoExistente() {
-        when(reservaRepository.findById(1L)).thenReturn(Optional.empty());
-
-        Reserva resultado = reservaService.obtenerReservaPorId(1L);
-
+    void testObtenerReservaPorIdNoExistente() {
+        when(reservaRepository.findById(2L)).thenReturn(Optional.empty());
+        Reserva resultado = reservaService.obtenerReservaPorId(2L);
         assertNull(resultado);
     }
 
     @Test
     void testCrearReserva() {
-        Reserva reserva = new Reserva();
-
-        when(reservaRepository.save(reserva)).thenReturn(reserva);
-
+        when(reservaRepository.save(any(Reserva.class))).thenReturn(reserva);
         Reserva resultado = reservaService.crearReserva(reserva);
-
         assertNotNull(resultado);
-        verify(reservaRepository, times(1)).save(reserva);
+        verify(libroRepository).findById(10L);
+        verify(ordenadorRepository).findById(20L);
+        verify(salaGrupalRepository).findById(30L);
+        verify(espacioIndividualRepository).findById(40L);
     }
 
     @Test
-    void testEliminarReserva_Existente() {
+    void testModificarReservaExistente() {
         when(reservaRepository.existsById(1L)).thenReturn(true);
-        doNothing().when(reservaRepository).deleteById(1L);
-
-        boolean resultado = reservaService.eliminarReserva(1L);
-
-        assertTrue(resultado);
-        verify(reservaRepository, times(1)).deleteById(1L);
-    }
-
-    @Test
-    void testEliminarReserva_NoExistente() {
-        when(reservaRepository.existsById(1L)).thenReturn(false);
-
-        boolean resultado = reservaService.eliminarReserva(1L);
-
-        assertFalse(resultado);
-        verify(reservaRepository, never()).deleteById(anyLong());
-    }
-
-    @Test
-    void testModificarReserva_Existente() {
-        Reserva reserva = new Reserva();
-        reserva.setId(1L);
-
-        when(reservaRepository.existsById(1L)).thenReturn(true);
-        when(reservaRepository.save(reserva)).thenReturn(reserva);
+        when(reservaRepository.save(any(Reserva.class))).thenReturn(reserva);
 
         Reserva resultado = reservaService.modificarReserva(1L, reserva);
 
         assertNotNull(resultado);
         assertEquals(1L, resultado.getId());
-        verify(reservaRepository, times(1)).save(reserva);
+        verify(reservaRepository).save(reserva);
     }
 
     @Test
-    void testModificarReserva_NoExistente() {
-        Reserva reserva = new Reserva();
-
+    void testModificarReservaNoExiste() {
         when(reservaRepository.existsById(1L)).thenReturn(false);
 
         Reserva resultado = reservaService.modificarReserva(1L, reserva);
 
         assertNull(resultado);
-        verify(reservaRepository, never()).save(any(Reserva.class));
+        verify(reservaRepository, never()).save(any());
     }
+
+    @Test
+    void testEliminarReservaExistente() {
+        when(reservaRepository.existsById(1L)).thenReturn(true);
+
+        boolean resultado = reservaService.eliminarReserva(1L);
+
+        assertTrue(resultado);
+        verify(reservaRepository).deleteById(1L);
+    }
+
+    @Test
+    void testEliminarReservaNoExiste() {
+        when(reservaRepository.existsById(1L)).thenReturn(false);
+
+        boolean resultado = reservaService.eliminarReserva(1L);
+
+        assertFalse(resultado);
+        verify(reservaRepository, never()).deleteById(any());
+    }
+    @Test
+void testCargarRecursosRelacionadosTodosNull() {
+    Reserva r = new Reserva(); // todos los recursos son null
+    reservaService.crearReserva(r); // llama internamente a cargarRecursosRelacionados
+    // No se debe lanzar excepción
+}
+
+@Test
+void testCargarRecursosRelacionadosConIdsNull() {
+    Reserva r = new Reserva();
+    r.setLibro(new Libro());  // ID null
+    r.setOrdenador(new Ordenador()); // ID null
+    r.setSalaGrupal(new SalaGrupal()); // ID null
+    r.setEspacioIndividual(new EspacioIndividual()); // ID null
+    reservaService.crearReserva(r); // No debería consultar repositorios
+    verifyNoInteractions(libroRepository, ordenadorRepository, salaGrupalRepository, espacioIndividualRepository);
+}
+
+@Test
+void testCargarRecursosRelacionadosConDatosNoEncontrados() {
+    Reserva r = new Reserva();
+    Libro libro = new Libro(); libro.setId(99L);
+    Ordenador ordenador = new Ordenador(); ordenador.setId(98L);
+    SalaGrupal sala = new SalaGrupal(); sala.setId(97L);
+    EspacioIndividual espacio = new EspacioIndividual(); espacio.setId(96L);
+    r.setLibro(libro);
+    r.setOrdenador(ordenador);
+    r.setSalaGrupal(sala);
+    r.setEspacioIndividual(espacio);
+
+    when(libroRepository.findById(99L)).thenReturn(Optional.empty());
+    when(ordenadorRepository.findById(98L)).thenReturn(Optional.empty());
+    when(salaGrupalRepository.findById(97L)).thenReturn(Optional.empty());
+    when(espacioIndividualRepository.findById(96L)).thenReturn(Optional.empty());
+
+    reservaService.crearReserva(r); // Se llama a cargarRecursosRelacionados
+
+    // No se lanzan errores aunque no se encuentren
+    verify(libroRepository).findById(99L);
+    verify(ordenadorRepository).findById(98L);
+    verify(salaGrupalRepository).findById(97L);
+    verify(espacioIndividualRepository).findById(96L);
+}
+
 }
